--- a/index.html
+++ b/index.html
@@ -21,17 +21,8 @@
             <div class="search-box">
     <h2>Check Your Result</h2>
     
-    <div class="gender-select" style="margin-bottom: 15px; display: flex; justify-content: center; gap: 20px;">
-        <label style="font-weight: 500; color: #333; cursor: pointer;">
-            <input type="radio" name="gender" value="B" checked> Boys
-        </label>
-        <label style="font-weight: 500; color: #333; cursor: pointer;">
-            <input type="radio" name="gender" value="G"> Girls
-        </label>
-    </div>
-
     <div class="input-group">
-        <input type="number" id="studentId" placeholder="Enter Reg No (e.g., 1, 2...)" autocomplete="off">
+        <input type="number" id="studentId" placeholder="Enter Register No (e.g., 1, 10...)" autocomplete="off">
         <button onclick="findResult()">Search</button>
     </div>
     <p id="errorMsg" class="error"></p>
